--- a/locale/fr_FR.po
+++ b/locale/fr_FR.po
@@ -4,7 +4,7 @@ msgstr "Content-Type: text/plain; charset=utf-8\n"
 
 msgctxt "error:purchase.purchase:"
 msgid "Analytic account is required on line \"%s\"."
-msgstr "Le compte analytique est requis sur la ligne \"%s\""
+msgstr "Le compte analytique est requis sur la ligne « %s »."
 
 msgctxt "field:purchase.line,analytic_accounts:"
 msgid "Analytic Accounts"
