Update es_CO translation

--- a/locale/es_CO.po
+++ b/locale/es_CO.po
@@ -352,7 +352,7 @@ msgstr "Anulada"
 
 msgctxt "selection:purchase.purchase,state:"
 msgid "Confirmed"
-msgstr "Confirmado"
+msgstr "Confirmada"
 
 msgctxt "selection:purchase.purchase,state:"
 msgid "Done"
