--- a/locale/es_CO.po
+++ b/locale/es_CO.po
@@ -90,9 +90,10 @@ msgctxt "field:purchase.line,analytic_accounts:"
 msgid "Analytic Accounts"
 msgstr "Cuentas Analíticas"
 
+#, fuzzy
 msgctxt "field:purchase.line,analytic_accounts_size:"
 msgid "Analytic Accounts Size"
-msgstr ""
+msgstr "Tamaño de Centro de Costos"
 
 msgctxt "field:purchase.line,description:"
 msgid "Description"
