--- a/locale/ru_RU.po
+++ b/locale/ru_RU.po
@@ -2,10 +2,18 @@
 msgid ""
 msgstr "Content-Type: text/plain; charset=utf-8\n"
 
+msgctxt "error:purchase.line:"
+msgid "Some mandatory root account are missing on \"%(name)s\""
+msgstr ""
+
 msgctxt "error:purchase.purchase:"
-msgid "Analytic account is required on line \"%s\"."
-msgstr "Счет аналитики необходим для строки \"%s\"."
+msgid "Analytic account is required for \"%(roots)s\" on line \"%(line)s\"."
+msgstr ""
 
 msgctxt "field:purchase.line,analytic_accounts:"
 msgid "Analytic Accounts"
 msgstr "Счета аналитики"
+
+msgctxt "field:purchase.line,analytic_accounts_size:"
+msgid "Analytic Accounts Size"
+msgstr ""
