--- a/locale/pt_BR.po
+++ b/locale/pt_BR.po
@@ -4,16 +4,16 @@ msgstr "Content-Type: text/plain; charset=utf-8\n"
 
 msgctxt "error:purchase.line:"
 msgid "Some mandatory root account are missing on \"%(name)s\""
-msgstr "Faltan algunas cuentas analíticas obligatorias en \"%(name)s\"."
+msgstr "Faltam algumas contas analíticas obrigatórias em \"%(name)s\"."
 
 msgctxt "error:purchase.purchase:"
 msgid "Analytic account is required for \"%(roots)s\" on line \"%(line)s\"."
-msgstr "La cuenta analítica de \"%(roots)s\" en la línea \"%(line)s\" es obligatoria."
+msgstr "A conta analítica de \"%(roots)s\" é obrigatória na linha \"%(line)s\"."
 
 msgctxt "field:purchase.line,analytic_accounts:"
 msgid "Analytic Accounts"
-msgstr "Cuentas analíticas"
+msgstr "Contas analíticas"
 
 msgctxt "field:purchase.line,analytic_accounts_size:"
 msgid "Analytic Accounts Size"
-msgstr "Tamaño de cuentas analíticas"
+msgstr "Tamanho das contas analíticas"
