Re-update translations

--- a/locale/es_CO.po
+++ b/locale/es_CO.po
@@ -8,13 +8,12 @@ msgstr "Alguna cuenta raíz obligatoria falta en \"%(name)s\""
 
 msgctxt "error:purchase.purchase:"
 msgid "Analytic account is required for \"%(roots)s\" on line \"%(line)s\"."
-msgstr ""
+msgstr "La cuenta analítica es requerida para \"%(root)s\" en la línea \"(line)s\"."
 
 msgctxt "field:purchase.line,analytic_accounts:"
 msgid "Analytic Accounts"
 msgstr "Cuentas Analíticas"
 
-#, fuzzy
 msgctxt "field:purchase.line,analytic_accounts_size:"
 msgid "Analytic Accounts Size"
 msgstr "Tamaño de Centro de Costos"
