--- a/locale/lo_LA.po
+++ b/locale/lo_LA.po
@@ -4,16 +4,16 @@ msgstr "Content-Type: text/plain; charset=utf-8\n"
 
 msgctxt "error:purchase.line:"
 msgid "Some mandatory root account are missing on \"%(name)s\""
-msgstr ""
+msgstr "ບາງບັນຊີຫຼັກບັງຄັບ ບໍາມີໃນ \"%(name)s\""
 
 msgctxt "error:purchase.purchase:"
 msgid "Analytic account is required for \"%(roots)s\" on line \"%(line)s\"."
-msgstr ""
+msgstr "ຕ້ອງການໃຫ້ມີ ບັນຊີວິເຄາະ ສຳລັບ \"%(roots)s\" ໃນລາຍການ \"%(line)s\"."
 
 msgctxt "field:purchase.line,analytic_accounts:"
 msgid "Analytic Accounts"
-msgstr ""
+msgstr "ບັນຊີວິເຄາະ"
 
 msgctxt "field:purchase.line,analytic_accounts_size:"
 msgid "Analytic Accounts Size"
-msgstr ""
+msgstr "ຂະໜາດບັນຊີວິເຄາະ"
