--- a/locale/es_MX.po
+++ b/locale/es_MX.po
@@ -4,16 +4,17 @@ msgstr "Content-Type: text/plain; charset=utf-8\n"
 
 msgctxt "error:purchase.line:"
 msgid "Some mandatory root account are missing on \"%(name)s\""
-msgstr "Faltan algunas cuentas analíticas obligatorias en \"%(name)s\"."
+msgstr "Faltan algunas cuentas raíz obligatorias en \"%(name)s\""
 
 msgctxt "error:purchase.purchase:"
 msgid "Analytic account is required for \"%(roots)s\" on line \"%(line)s\"."
-msgstr "La cuenta analítica de \"%(root)s\" es obligatoria en la línea \"%(line)s\"."
+msgstr "Se requiere la cuenta analítica para \"%(roots)s\" en la línea \"%(line)s\"."
 
+#, fuzzy
 msgctxt "field:purchase.line,analytic_accounts:"
 msgid "Analytic Accounts"
-msgstr "Cuentas analíticas"
+msgstr "Cuentas Analíticas"
 
 msgctxt "field:purchase.line,analytic_accounts_size:"
 msgid "Analytic Accounts Size"
-msgstr "Tamaño de cuentas analíticas"
+msgstr ""
