--- a/locale/fr.po
+++ b/locale/fr.po
@@ -9,8 +9,8 @@ msgstr "Certains comptes racines obligatoires manquent sur « %(name)s »"
 msgctxt "error:purchase.purchase:"
 msgid "Analytic account is required for \"%(roots)s\" on line \"%(line)s\"."
 msgstr ""
-"Un compte analytique est requis pour « %(roots)s » sur la ligne « %(line)s "
-"»."
+"Un compte analytique est requis pour « %(roots)s » sur la ligne "
+"« %(line)s »."
 
 msgctxt "field:purchase.line,analytic_accounts:"
 msgid "Analytic Accounts"
