--- a/locale/et.po
+++ b/locale/et.po
@@ -4,13 +4,12 @@ msgstr "Content-Type: text/plain; charset=utf-8\n"
 
 msgctxt "field:purchase.line,analytic_accounts:"
 msgid "Analytic Accounts"
-msgstr "Аналитични сметки"
+msgstr "Analüütilised kontod"
 
-#, fuzzy
 msgctxt "field:purchase.line,analytic_accounts_size:"
 msgid "Analytic Accounts Size"
-msgstr "Аналитични сметки"
+msgstr "Analüütilisete kontode suurus"
 
 msgctxt "view:purchase.line:"
 msgid "Analytic"
-msgstr ""
+msgstr "Analüütiline"
