--- a/locale/fa.po
+++ b/locale/fa.po
@@ -2,14 +2,6 @@
 msgid ""
 msgstr "Content-Type: text/plain; charset=utf-8\n"
 
-msgctxt "error:purchase.line:"
-msgid "Some mandatory root account are missing on \"%(name)s\""
-msgstr "برخی از الزامات حساب ریشه مفقود شده است در: \"٪ s\""
-
-msgctxt "error:purchase.purchase:"
-msgid "Analytic account is required for \"%(roots)s\" on line \"%(line)s\"."
-msgstr "حساب تحلیلی برای ریشه: \"٪ s\" در خط : \"٪ s\" مورد نیاز است."
-
 msgctxt "field:purchase.line,analytic_accounts:"
 msgid "Analytic Accounts"
 msgstr "تجزیه و تحلیل حساب ها"
@@ -21,3 +13,19 @@ msgstr "اندازه تجزیه و تحلیل حساب ها"
 msgctxt "view:purchase.line:"
 msgid "Analytic"
 msgstr "تحلیلی"
+
+msgctxt "model:ir.message,text:msg_analytic_account_required_for_quotation"
+msgid ""
+"To get a quote for purchase \"%(purchase)s\", you must enter a analytic "
+"account for \"%(roots)s\" on line \"%(line)s\"."
+msgstr ""
+"برای دریافت یک نقل قول برای خرید: \"%(purchase)s\" شما باید یک حساب تحلیلی "
+"برای \"%(roots)s\"روی سطر: \"%(line)s\" وارد کنید."
+
+msgctxt "error:purchase.line:"
+msgid "Some mandatory root account are missing on \"%(name)s\""
+msgstr "برخی از الزامات حساب ریشه مفقود شده است در: \"٪ s\""
+
+msgctxt "error:purchase.purchase:"
+msgid "Analytic account is required for \"%(roots)s\" on line \"%(line)s\"."
+msgstr "حساب تحلیلی برای ریشه: \"٪ s\" در خط : \"٪ s\" مورد نیاز است."
