--- a/locale/ro.po
+++ b/locale/ro.po
@@ -4,12 +4,12 @@ msgstr "Content-Type: text/plain; charset=utf-8\n"
 
 msgctxt "field:purchase.line,analytic_accounts:"
 msgid "Analytic Accounts"
-msgstr "Akun Analitik"
+msgstr "Conturi analitice"
 
 msgctxt "field:purchase.line,analytic_accounts_size:"
 msgid "Analytic Accounts Size"
-msgstr "Ukuran Akun Analitik"
+msgstr "Mărimea conturilor analitice"
 
 msgctxt "view:purchase.line:"
 msgid "Analytic"
-msgstr "Analitik"
+msgstr "Analitic"
